<resources>
    <string name="app_name">MyPalindromeApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_photo">ic_photo</string>
    <string name="hint_name">Name</string>
    <string name="hint_palindrome">Palindrome</string>
    <string name="hint_check">CHECK</string>
    <string name="hint_next">NEXT</string>
    <string name="second_screen_title">Second Screen</string>
    <string name="welcome_text">Welcome</string>
    <string name="name">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user_hint">Choose a User</string>
    <string name="third_screen_title">Third Screen</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">EMAIL@EMAIL.COM</string>
    <string name="retry">Try Again</string>
</resources>