<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cvUsers"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar_img"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:shapeAppearanceOverlay="@style/ImageRoundedStyle"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/avatar_img"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/firstname" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_first_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lastname" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/avatar_img"
            app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
            tools:text="@string/email" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.cardview.widget.CardView>